2004-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stencil.cc (ly:interpret-stencil): Was:
	interpret_stencil_expression.

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh: New file.

	* scm/output-gnome.scm: White background, better window size, sane
	canvas size.  Cleanups.

2004-06-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/invoking.itexi (Invoking the lilypond
	binary): document --safe.

	* scm/output-gnome.scm: set PATH in script.

	* scm/page-layout.scm (default-page-make-stencil): don't stretch
	if there is too few systems on a page.

	* lily/parser.yy (relative_music): start at middle C without pitch
	argument.

	* Documentation/user/changing-defaults.itely (Page layout): new node.
	(Paper size): rename node
	(Page breaking): new node.
	(Titling): move from invoking.
	(File structure): new node.

	* lily/parser.yy (score_body): allow \header and music anywhere in
	\score body.

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (ly:load): Remove page-breaking.scm.

2004-06-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/paper-system.hh: move cc/hh file from paper-line.*

	* lily/include/paper-line.hh: rename to Paper_system.

	* lily/include/paper-book.hh: doc class.

	* lily/paper-book.cc (c_ragged_page_breaks): remove functions. 

	* scm/page-layout.scm (plain-footer): add tagline/copyright. 
	(plain-header): add instrument-name.
	(default-page-make-stencil): bugfixes.

	* lily/parser.yy (book_body): allow \header anywhere in \book{}

	* lily/paper-book.cc: remove copyright & tagline. Remove
	interactions with Page

	* scm/page-layout.scm (ly:optimal-page-breaks): move back breaking
	here, 
	(default-page-make-stencil): new function
	(default-page-music-height): new function
	(page-headfoot): new function
	(ly:optimal-page-breaks): generate stencils directly from here

	* scm/titling.scm: new file, group titling functions
