@@ -1,5 +1,8 @@
 2004-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-gnome.scm: Remove script again; re-add modules fix
+	(CVS conflict resolve?)
+
 	* lily/stencil.cc (ly:interpret-stencil): Was:
 	interpret_stencil_expression.
 
